--- a/client/src/components/Auth/Auth.css
+++ b/client/src/components/Auth/Auth.css
@@ -49,7 +49,7 @@ input[type=button]:active, button[type=submit]:active, input[type=reset]:active 
   transform: scale(0.95);
 }
 
-input[type=text], input[type=password] {
+input[type=email], input[type=password] {
   background-color: #f6f6f6;
   color: #0d0d0d;
   padding: 15px 32px;
@@ -64,12 +64,12 @@ input[type=text], input[type=password] {
   border-radius: 5px 5px 5px 5px;
 }
 
-input[type=text]:focus, input[type=password]:focus {
+input[type=email]:focus, input[type=password]:focus {
   background-color: #fff;
   border-bottom: 2px solid var(--dodo-orange);
 }
 
-input[type=text]::placeholder, input[type=password]::placeholder {
+input[type=email]::placeholder, input[type=password]::placeholder {
   color: #cccccc;
 }
 
@@ -152,4 +152,9 @@ input[type=text]::placeholder, input[type=password]::placeholder {
 
 #icon {
   width: 60%;
+}
+
+.form-invalid {
+  margin-top: 10px;
+  color: red
 }
